<resources>

    <!-- Títulos actividades -->

    <string name="app_name">Proyecto PGL juaponabr 3º DAM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_secciones">SeccionesActivity</string>
    <string name="title_activity_galeria">Galería Photos</string>

    <string name="title_activity_edita_cliente">Cliente</string>
    <string name="title_activity_edita_contrato">Contrato</string>
    <string name="title_activity_listado_clientes">Listado Clientes</string>
    <string name="title_activity_listado_contratos">Listado Contratos</string>

    <!-- Menus -->

    <!-- Desplegable -->
    <string name="menu_galeria">Galería de fotos</string>
    <string name="menu_secciones">Secciones</string>
    <string name="menu_seccion_salir">Salir y Cerrar</string>
    <string name="menu_cerrar">Cerrar</string>

    <!-- textos botones -->

    <string name="ver_actuaciones">Actuaciones</string>
    <string name="ver_contratos">Contratos</string>
    <string name="ver_clientes">Clientes</string>
    <string name="guardar_actuacion">Nueva Actuación</string>
    <string name="guardar_contrato">Nuevo Contrato</string>
    <string name="guardar_cliente">Nuevo Cliente</string>
    <string name="cerrar_app">Salir</string>

    <!-- auxiliares para construir frases -->
    <string name="txt_de">de</string>
    <string name="txt_del">del</string>

    <!--
        textos dialogos
                        -->

    <!-- dialogo cerrar -->
    <string name="atencion">¡ Atención !</string>
    <string name="advertencia_salir">Se dispone a abandonar y cerrar la aplcación</string>
    <string name="confirmar_salir">¿ Desea confirmar esta acción ?</string>
    <string name="bAceptar">Aceptar</string>
    <string name="bCancelar">Cancelar</string>

    <!-- dialogo proceso en construcción -->
    <string name="txt_titulo_mensaje">Advertencia</string>
    <string name="txt_modulo_construccion">Módulo en construcción</string>


    <string name="txt_titulo_ayuda_app">Ayuda general de la Aplicación</string>
    <string name="txt_texto_ayuda_app">Esta va a ser la ayuda general de toda la aplicación con acceso a todos los contenidos de la misma</string>

    <string name="txt_titulo_ayuda_registros">Ayuda a la Edición de Registros</string>
    <string name="txt_texto_ayuda_registros">Aquí se pondrá la ayuda referente a la edición de registros</string>
    <string name="txt_titulo_setings">Parametros Customizables</string>
    <string name="txt_texto_setings">Aquí se verán los parámetros ajustables por el usuario</string>

    <!--  dialogo guardando registro -->
    <string name="titulo_guardando">Datos a guardar</string>

    <!--
        campos
                        -->

    <string name="progress_cargando_datos">Cargando datos&#8230;</string>
    <string name="sin_datos">Sin datos.</string>

    <!-- campos actuaciones -->
    <string name="cA_fecha">Fecha</string>
    <string name="cA_lugar">Lugar</string>
    <string name="cA_cliente">Cliente</string>
    <string name="cA_precio">Precio</string>

    <!-- campos cliente -->
    <string name="cC_nombre">Nombre</string>
    <string name="cC_direccion">Dirección</string>
    <string name="cC_localidad">Localidad</string>
    <string name="cC_km">Km.</string>

    <!-- campos contratos -->
    <string name="cCt_">ct</string>

    <!--
        etiquetas actividades
                        -->

    <!-- EditaContrato -->
    <string name="txt_elegirDia">Seccionar Día/s</string>
    <string name="txt_lunes">Lunes</string>
    <string name="txt_martes">Martes</string>
    <string name="txt_miercoles">Miércoles</string>
    <string name="txt_jueves">Jueves</string>
    <string name="txt_viernes">Viernes</string>
    <string name="txt_sabado">Sábado</string>
    <string name="txt_domingo">Domingo</string>
    <string name="txt_periodicida">Periodicidad</string>
    <string name="txt_semanal">Semanal</string>
    <string name="txt_quincenal">Quincenal</string>
    <string name="txt_mensual">Mensual</string>
    <string name="txt_unica">Única</string>
    <string name="txt_fecha">Inicio</string>
    <string name="txt_dia">Día</string>
    <string name="txt_mes">Mes</string>
    <string name="txt_cliente">Cliente</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_simbolo_euro">€</string>
    <string name="bot_guardar">Guardar</string>

    <!--
        errores
                    -->

    <!-- validaciones de formularios -->
    <string name="error_campo_obligatorio">Campo Obligatorio</string>


    <!-- validadción contrato -->
    <string name="error_cliente">No se ha asignado ningún cliente</string>
    <string name="error_precio">No se ha establecido ningún precio</string>
    <string name="error_mes">No se ha introducido el mes</string>
    <string name="error_mes_incorrecto">Mes fuera de rango</string>
    <string name="error_dia">No se ha introducido el día</string>
    <string name="error_dia_incorrecto">Día fuera de rango</string>
    <string name="error_fecha">La fecha debe ser entre hoy y el 31/12 del año en curso, ambos inclusive</string>
    <string name="error_dias">No se ha elgido ningún día de la semana</string>
    <string name="error_periodicidad">No se ha seleccionado la periodicidad</string>

    <string name="nav_header_title">Joan Pons Live Music</string>
    <string name="nav_header_subtitle">www.joanponslivemusic.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="action_help">Ayuda</string>

    <!-- validadción cliente -->
    <string name="error_campo_vacio">No se ha introducido ningún dato en : </string>
    <string name="error_DNI">El DNI debe tener almenos 8 digitos y una letra</string>
    <string name="error_telefono">El teléfono debe tener almenos 9 digitos</string>
    <string name="error_CP">El CP debe tener almenos 5 digitos</string>

    <!-- EditaCliente -->
    <string name="txt_cl_identidad">Datos identificativos</string>
    <string name="txt_cl_nombre">Nombre</string>
    <string name="txt_cl_dni">D.N.I.</string>
    <string name="txt_dir_direccion">Dirección</string>
    <string name="txt_dir_via">Vía</string>
    <string name="txt_dir_num">Nº</string>
    <string name="txt_dir_cp">C.P.</string>
    <string name="txt_dir_localidad">Municipio</string>
    <string name="txt_distanacia">Distancia</string>
    <string name="txt_km">Km.</string>
    <string name="txt_cl_datos_contacto">Datos de contacto</string>
    <string name="txt_cl_telefono">Teléfono</string>
    <string name="txt_cl_per_contacto">Persona de contacto</string>

    <!-- capa_botones_edita_registro -->

    <!-- galería photos -->
    <string name="ruta_photos">../res/lasphotos/F-00</string>
    <string name="ext_photos">.jpg</string>

</resources>
