<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_galeria" />
        <item
            android:id="@+id/nav_secciones"
            android:icon="@drawable/ic_input_get"
            android:title="@string/menu_secciones" />

    </group>

    <item
        android:title="@string/menu_seccion_salir">

        <menu>

            <item
                android:id="@+id/nav_cerrar"
                android:icon="@drawable/ic_action_cerrar"
                android:title="@string/menu_cerrar" />

        </menu>

    </item>

</menu>
